Fixed Dialog-contextMenu visibility issue; universal contextMenu buggy, causes sticky components

--- a/css/dbmod.css
+++ b/css/dbmod.css
@@ -13,196 +13,6 @@ margin-top: 2em;
 cursor: pointer;
 }
 
-#dialog-link {
-padding: .4em 1em .4em 20px;
-text-decoration: none;
-position: relative;
-}
-
-#dialog-link span.ui-icon {
-margin: 0 5px 0 0;
-position: absolute;
-left: .2em;
-top: 50%;
-margin-top: -8px;
-}
-
-#icons {
-margin: 0;
-padding: 0;
-}
-
-#icons li {
-margin: 2px;
-position: relative;
-padding: 4px 0;
-cursor: pointer;
-float: left;
-list-style: none;
-}
-
-#icons span.ui-icon {
-float: left;
-margin: 0 4px;
-}
-
-.fakewindowcontain .ui-widget-overlay {
-position: absolute;
-}
-
-#sidebar {
-float: left;
-width: 20%;
-}
-
-#canvas {
-float: right;
-width: 75%;
-border-style: double;
-height: 800px;
-background-color: white;
-}
-
-#topheader {
-height: 20px;
-background-color: #696969;
-color: white;
-text-align: center;
-font-size: 15px;
-}
-.entity 
-{ 
-	/*width: 80px;
-	height: 80px;*/
-	padding: 10px;
-	position: absolute;
-	border:solid 1px #4A6650;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
-	-moz-box-shadow: 1px 0px 8px #82a385;
-	-webkit-box-shadow: 1px 0px 8px #82a385;
-	box-shadow: 1px 0px 8px #82a385;
-	background-color: white;
-}
-
-.cardinality 
-{ 
-	/*width: 80px;
-	height: 80px;*/
-	padding: 5px;
-	position: absolute;
-	border:solid 1px #4A6650;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
-	-moz-box-shadow: 1px 0px 8px #82a385;
-	-webkit-box-shadow: 1px 0px 8px #82a385;
-	box-shadow: 1px 0px 8px #82a385;
-	background-color: white;
-}
-.inner-text
-{
-	font-size: 12px;
-    text-align:center;
-}
-.entity .connector-container
-{
-	position: absolute;
-	top: 45%;
-	float: right;
-}
-.weak-entity 
-{ 
-	/*width: 80px;
-	height: 80px;*/
-	padding: 10px;
-	position: absolute;
-	border:double 4px #4A6650;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
-	-moz-box-shadow: 1px 0px 8px #82a385;
-	-webkit-box-shadow: 1px 0px 8px #82a385;
-	box-shadow: 1px 0px 8px #82a385;
-	background-color: white;
-}
-/*.relationship //
-{
-	padding: 10px;
-	position: absolute;
-	border:solid 1px #4A6650;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
-	-moz-box-shadow: 1px 0px 8px #82a385;
-	-webkit-box-shadow: 1px 0px 8px #82a385;
-	box-shadow: 1px 0px 8px #82a385;
-	background-color: white;
-	color: blue;
-}*/
-.relationship, .isa-relationship, .op-relationship, .dc-relationship
-{
-	background-image:url(../img/diamond.gif);
-	position:absolute;
-	width:80px;
-	height:80px;
-    line-height:80px;
-    vertical-align:middle;
-}
-
-.ex-relationship
-{
-	background-image:url(../img/diamond.gif);
-	position:absolute;
-	width:80px;
-	height:80px;
-    line-height:80px;
-    vertical-align:middle;
-}
-
-.id-relationship
-{
-	background-image:url(../img/diamond.gif);
-	position:absolute;
-	width:80px;
-	height:80px;
-    line-height:80px;
-    vertical-align:middle;
-}
-.attribute
-{
-	position: absolute;
-	padding: 1%;
-	border:solid 1px #4A6650;
-	border-radius: 50% / 50%;	
-}
-.endpoint-entity-hover{
-	opacity: 1.0;
-}
-.endpoint-entity-hover
-{
-	opacity: 0.6;
-}
-.endpoint-no-display
-{
-	display: none;
-}
-=======
-body{
-font: 62.75% "Trebuchet MS", sans-serif;
-margin: 20px;
-background-color: #555555;
-}
-
-.demoHeaders {
-margin-top: 2em;
-}
-
-.subheader {
-cursor: pointer;
-}
-
 #tabs {
 height: 1000px;
 }
@@ -304,41 +114,6 @@ font-size: 15px;
 	box-shadow: 1px 0px 8px #82a385;
 	background-color: white;
 }
-/*.relationship //
-{
-	padding: 10px;
-	position: absolute;
-	border:solid 1px #4A6650;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
-	-moz-box-shadow: 1px 0px 8px #82a385;
-	-webkit-box-shadow: 1px 0px 8px #82a385;
-	box-shadow: 1px 0px 8px #82a385;
-	background-color: white;
-	color: blue;
-}*/
-/*.relationship
-{
-    width: 0px; 
-    height: 0px;
-    border: 20px solid transparent; 
-    border-bottom-color: lightblue; 
-    position: relative; 
-    top: 0px;
-    background-color: white;
-}
-.relationship:after
-{
-    content: "";
-    position: absolute; 
-    left: -20px; 
-    top: 19px; 
-    width: 0; 
-    height: 0; 
-    border: 20px solid transparent; 
-    border-top-color: lightblue;
-}*/
 .relationship
 {
 	background-image:url(../img/diamond.gif);
